<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_garage_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cst2335_group_final.GarageFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/garage_door_heading"
        android:text="@string/garage_door_heading"
        android:theme="@style/HeadingText"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <ToggleButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/toggle_garage_door"
        android:textOff="@string/garage_door_closed"
        android:textOn="@string/garage_door_open"
        android:background="@drawable/toggle_selector"
        android:theme="@style/Button"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/garage_light_heading"
        android:text="@string/garage_light_heading"
        android:theme="@style/HeadingText"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <ToggleButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/toggle_garage_light"
        android:textOff="@string/garage_light_off"
        android:textOn="@string/garage_light_on"
        android:background="@drawable/toggle_selector"
        android:theme="@style/Button"
        android:gravity="center"/>

</LinearLayout>

