<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_house_temp_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cst2335_group_final.HouseTempFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/garage_door_heading"
        android:text="@string/house_temp_heading"
        android:theme="@style/HeadingText"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <FrameLayout
        android:layout_width="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_height="100dp">

        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/house_temp_number_picker"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            />

    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/garage_light_heading"
        android:text="@string/house_temp_schedule_heading"
        android:theme="@style/HeadingText"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:text="@string/edit_temp_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_temp_schdule"
            android:theme="@style/Button"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:text="@string/delete_temp_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_temp_schdule"
            android:theme="@style/Button"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>
    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">-->

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/house_temp_listview"
            android:layout_height="150dp" />
<!--
    </ScrollView>
-->

</LinearLayout>

