<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:id="@+id/weather_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_temp_text"
        android:text="@string/weather_current_temp"
        android:theme="@style/SubheadingText"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/min_temp_text"
        android:text="@string/weather_min_temp"
        android:theme="@style/SubheadingText"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/max_temp_text"
        android:text="@string/weather_max_temp"
        android:theme="@style/SubheadingText"
        android:layout_marginBottom="10dp"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weather_progressbar"
        style="?android:attr/progressBarStyleHorizontal"/>

</LinearLayout>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.victo.cst2335_finalproject.WeatherFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/weatherImage"/>-->

   <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherCurrentTemp"
        android:text="@string/weather_current_temp"
        android:theme="@style/SubheadingText"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherMinTemp"
        android:text="@string/weather_min_temp"
        android:theme="@style/SubheadingText"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherMaxTemp"
        android:text="@string/weather_max_temp"
        android:theme="@style/SubheadingText"
        android:gravity="center_horizontal"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/weatherProgress" />

</LinearLayout>-->
